# l1sign

./: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac
doc/: Makefile.am  l1sign.1
doc/book/: _index.md  book.toml
doc/book/src/: SUMMARY.md  download.md  index.md
src/: Makefile.am  l1sign.c  l1sign.h  l1sign_cmd_genkey.c  l1sign_cmd_genkey.h  l1sign_cmd_pubkey.c  l1sign_cmd_pubkey.h  l1sign_cmd_sign.c  l1sign_cmd_sign.h  l1sign_cmd_verify.c  l1sign_cmd_verify.h  l1sign_gcrypt.c  l1sign_gcrypt.h  l1sign_util.c  l1sign_util.h
